feat: implements create channel process
